--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,26 +2,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:showIn="navigation_view">
-
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/home"
             android:checked="false"
             android:icon="@drawable/ic_menu_home"
-            android:title="Home"/>
+            android:title="@string/home" />
 
         <item
             android:id="@+id/carta"
             android:icon="@drawable/ic_menu_menu"
             android:checked="false"
-            android:title="Carta"
+            android:title="@string/carta"
            />
 
         <item
             android:id="@+id/acceder"
             android:checked="false"
             android:icon="@drawable/ic_menu_people"
-            android:title="Acceder"
+            android:title="@string/acceder"
             />
     </group>
 </menu>
