--- a/app/src/main/res/layout/fragment_acceder.xml
+++ b/app/src/main/res/layout/fragment_acceder.xml
@@ -70,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="No tienes cuenta? Regístrate aquí!"
+        android:text="@string/no_tienes_cuenta_reg_strate_aqu"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
