--- a/app/src/main/res/layout/fragment_acceder.xml
+++ b/app/src/main/res/layout/fragment_acceder.xml
@@ -28,10 +28,10 @@
         app:layout_constraintTop_toBottomOf="@+id/tvLogin">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etUsernameLogin"
+            android:id="@+id/etEmailLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/nombre_de_usuario" />
+            android:hint="@string/correo_electronico" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
