puedes hacer lo de reserva!!!

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -28,5 +28,11 @@
             android:icon="@drawable/ic_menu_people"
             android:title="@string/Registrar"
             />
+        <item
+            android:id="@+id/reservas"
+            android:checked="false"
+            android:icon="@drawable/ic_menu_people"
+            android:title="@string/reservas"
+            />
     </group>
 </menu>
