--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,13 +25,12 @@
         <item
             android:id="@+id/register"
             android:checked="false"
-            android:icon="@drawable/ic_menu_people"
+            android:icon="@drawable/baseline_person_add_alt_1_24"
             android:title="@string/Registrar"
             />
         <item
             android:id="@+id/reservas"
             android:checked="false"
-            android:icon="@drawable/ic_menu_people"
             android:title="@string/reservas"
             />
     </group>
