--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -31,6 +31,7 @@
         <item
             android:id="@+id/reservas"
             android:checked="false"
+            android:icon="@drawable/baseline_assignment_24"
             android:title="@string/reservas"
             />
     </group>
