--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,11 +16,14 @@
         android:id="@+id/imageView"
         android:layout_width="121dp"
         android:layout_height="84dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginBottom="10dp"
         app:srcCompat="@drawable/logo" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="@string/bienvenido_a_la_casa_nostra"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 </LinearLayout>
