--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -51,11 +51,11 @@
 
     <!-- Botón para editar la información del perfil -->
     <Button
-        android:id="@+id/edit_button"
+        android:id="@+id/cerrrarSesion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/password_textview"
-        android:text="Editar perfil"
+        android:text="Cerrar Sesion"
         android:textSize="16sp"
         android:layout_marginTop="16dp"
         android:layout_centerHorizontal="true" />
