--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -6,9 +6,9 @@
     <!-- Vista de imagen para la foto de perfil -->
     <ImageView
         android:id="@+id/profile_image"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/ic_menu_people"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:src="@drawable/fotopredeterminada"
         android:layout_marginTop="50dp"
         android:layout_centerHorizontal="true" />
 
