--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="botones">#a65a05</color>
-    <color name="fondo">#e37c07</color>
+    <color name="botones">#2196F3</color>
+    <color name="fondo">#ECEFF1 </color>
 </resources>
