--- a/app/src/main/res/layout/fragment_reserva.xml
+++ b/app/src/main/res/layout/fragment_reserva.xml
@@ -64,6 +64,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@color/black"
             android:textStyle="bold" />
 
     </LinearLayout>
@@ -101,6 +102,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@color/black"
             android:textStyle="bold" />
 
 
