--- a/app/src/main/res/layout/spinner_item_geekipedia.xml
+++ b/app/src/main/res/layout/spinner_item_geekipedia.xml
@@ -7,5 +7,6 @@
     android:textColor="@color/black"
     android:background="@color/fondo"
     android:paddingStart="20dp"
+    android:textStyle="bold"
     xmlns:android="http://schemas.android.com/apk/res/android"
     tools:ignore="RtlSymmetry" />
