ocultar password e ip empresa...

--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -41,25 +41,23 @@
             android:textSize="18sp"
             android:layout_marginTop="15dp"
             android:textColor="@color/black"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <EditText
             android:id="@+id/passwordActual"
             android:hint="@string/contrase_a_actual"
             android:textSize="18sp"
-            android:textColor="@color/black"
-
             android:layout_marginTop="15dp"
+            android:textColor="@color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <EditText
             android:id="@+id/passwordNew"
             android:hint="@string/contrase_a_nueva"
             android:textSize="18sp"
-            android:textColor="@color/black"
-
             android:layout_marginTop="15dp"
+            android:textColor="@color/black"
+            android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
