--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -27,10 +27,11 @@
         android:drawablePadding="8dp"
         android:focusable="true"
         android:padding="16dp"
-        android:paddingStart="15dp"
+        android:paddingStart="35dp"
         android:text="@string/perfil"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:paddingEnd="35dp"
         app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24"
         app:drawableStartCompat="@drawable/ic_menu_people"
         tools:ignore="RtlSymmetry" />
@@ -46,10 +47,11 @@
         android:drawablePadding="8dp"
         android:focusable="true"
         android:padding="16dp"
-        android:paddingStart="15dp"
+        android:paddingStart="35dp"
         android:text="@string/admin"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:paddingEnd="35dp"
         app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24"
         app:drawableStartCompat="@drawable/baseline_manage_accounts_24"
         tools:ignore="RtlSymmetry" />
