--- a/app/src/main/res/layout/listitem_tipo_producto.xml
+++ b/app/src/main/res/layout/listitem_tipo_producto.xml
@@ -8,11 +8,11 @@
 
     <ImageView
         android:id="@+id/imagen"
-        android:layout_width="150dp"
+        android:layout_width="135dp"
         android:layout_height="100dp"
-        android:src="@drawable/logo"
         android:layout_gravity="center_vertical"
-        android:layout_marginEnd="8dp"/>
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/logo" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
